Fixes https://github.com/alexdev03/UnlimitedNametags/issues/50